# FPGABenchmarks

./: .gitignore  .gitmodules  CMakeLists.txt
benchmarks/: CMakeLists.txt
benchmarks/gaussian/: CMakeLists.txt
benchmarks/gaussian/include/: gaussian.h
benchmarks/gaussian/src/: gaussian.cpp  gaussian_bench.cpp  gaussian_cpu.cpp  gaussian_demo.cpp  gaussian_single_thread.cpp
benchmarks/mandelbrot/: CMakeLists.txt
benchmarks/mandelbrot/include/: mandelbrot.h
benchmarks/mandelbrot/src/: main.cpp  main_bench.cpp  main_demo.cpp  mandelbrot_bench.cpp  mandelbrot_cpu.cpp  mandelbrot_cpu_avx.cpp  mandelbrot_cpu_sse.cpp  mandelbrot_demo.cpp  mandelbrot_single_thread.cpp
benchmarks/mandelbrot/src/mandelbrot_ispc/: mandelbrot.ispc  mandelbrot_ispc_avx.cpp  mandelbrot_ispc_sse.cpp
benchmarks/mandelbrot/src/mandelbrot_ocl/: mandelbrot.cl  mandelbrot_ocl.cpp
libs/: CMakeLists.txt
libs/cl_utils/: CMakeLists.txt
libs/cl_utils/include/cl/: Device.h  Engine.h  common.h
libs/cl_utils/src/cl/: Device.cpp  Engine.cpp  Platform.cpp
libs/commons/: CMakeLists.txt
libs/commons/include/: omp_commons.h  timer.h  type_helpers.h
libs/commons/src/: timer.cpp
libs/demos/: CMakeLists.txt
libs/demos/src/show_devices/: main.cpp
libs/images/: CMakeLists.txt
libs/images/include/: images.h
libs/images/src/: images.cpp
libs/primitives/: CMakeLists.txt
libs/primitives/include/: vector2.h
libs/primitives/src/: vector2.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/cl/: Platform.h  common.h
libs/utils/src/cl/: Device.cpp  common.cpp
